--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
 
       <section class="site-section darken-bg" id="section-aboutme">
         <div class="container padding text-justify">
-          <div class="row justify-content-center">
+          <div class="row">
             <div class="col-md-8">
               <h2 class="heading text-uppercase text-white">About Me</h2>
               <!-- <figure class="mb-5" data-aos="fade-up"><img src="images/person_3.jpg" alt="Image" class="img-fluid w-50 rounded"></figure> -->
-              <div data-aos="fade-up"  data-aos-delay="100">
+              <div data-aos="fade-up  justify-content-center"  data-aos-delay="100">
               <h2 class="text-white">Hi I'm Sakha</h2>
               <p>You’ve come to the right place to know more about me!</p>
               <p>I’m a self-taught photographer & an amateur designer from the Southernmost Atoll in the Maldives, based in the capital concrete jungle: Malè.</p>
@@ -401,10 +401,12 @@
               <p>Over the years, I’ve worked with businesses and people of all types & backgrounds.</p>
               <p>My experience covers portraiture, product, landscape, wedding, events and architectural photography.</p>
               <p>I consider myself incredibly lucky, to be doing what I love to do, and share my passion for photography with anyone and everyone who approach & work with me.  If you would like to consider working together, I would love to speak with you. </p>
-              <p class="text-white mt-5">Please email me directly at: <a href = "mailto: hello@sakha.photography">hello@sakha.photography</a> </p>
 
 
               </div>
+              <div data-aos="fade-up"  data-aos-delay="100">
+              <p class="text-white mt-5">Please email me directly at: <a href = "mailto: hello@sakha.photography">hello@sakha.photography</a> </p>
+            </div>
             </div>
           </div>
         </div>
