--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
     <div class="main-menu">
       <ul class="js-clone-nav">
-        <li><a href="#section-gallery" class="nav-link">Gallery</a></li>
+        <li><a href="#section-portraits" class="nav-link">Portraits</a></li>
+        <li><a href="#section-food" class="nav-link">Food & Lifestyle</a></li>
         <li><a href="#section-aboutme" class="nav-link">About Me</a></li>
       </ul>
       <ul class="social js-clone-nav">
@@ -71,7 +72,7 @@
 
 
 
-      <section class="row align-items-stretch photos" id="section-gallery">
+      <section class="row align-items-stretch photos" id="section-portraits">
         <div class="col-12">
         <div class="row align-items-stretch">
           <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
@@ -381,6 +382,257 @@
 
 
       </div>
+      <section class="row align-items-stretch photos" id="section-food">
+        <div class="col-12">
+        <div class="row align-items-stretch">
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img7.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img7.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img8.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img8.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img9.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img9.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img1.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img1.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img2.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img2.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img3.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img3.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img10.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img10a.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img11.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img11.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img12.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img12.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+            <a href="images/food/img13.jpg" class="d-block photo-item" data-fancybox="gallery">
+              <img src="images/food/img13.jpg" alt="Image" class="img-fluid">
+              <div class="photo-text-more">
+                <span class="icon icon-search"></span>
+              </div>
+            </a>
+          </div>
+
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img14.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img14.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img15.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img15.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img16.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img16.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img17.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img17.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img18.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img18.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img4.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img4.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img5.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img5a.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img6.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img6.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img20.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img20a.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img19.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img19.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img21.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img21a.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img22.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img22a.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img24.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img24a.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img23.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img23a.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img25.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img25.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img27.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img27.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <a href="images/food/img26.jpg" class="d-block photo-item" data-fancybox="gallery">
+          <img src="images/food/img26.jpg" alt="Image" class="img-fluid">
+          <div class="photo-text-more">
+            <span class="icon icon-search"></span>
+          </div>
+        </a>
+      </div>
+
+
 
     </div>
       </section> <!-- #section-photos -->
