--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
     <div class="main-menu">
       <ul class="js-clone-nav">
-        <li><a href="#section-portraits" class="nav-link">Portraits</a></li>
-        <li><a href="#section-food" class="nav-link">Food & Lifestyle</a></li>
         <li><a href="#section-aboutme" class="nav-link">About Me</a></li>
+        <li><a href="#section-portraits" class="nav-link">Portraiture</a></li>
+        <li><a href="#section-food" class="nav-link">Food & Lifestyle</a></li>
       </ul>
       <ul class="social js-clone-nav">
         <span><a href="https://www.instagram.com/sakha.photography" target="_blank"><span class="icon-instagram"></span></a></span>
@@ -70,6 +70,29 @@
   <main class="main-content">
 
 
+    <section class="site-section darken-bg" id="section-aboutme">
+      <div class="container padding">
+        <div class="row">
+          <div class="col-md-8">
+            <!-- <figure class="mb-5" data-aos="fade-up"><img src="images/person_3.jpg" alt="Image" class="img-fluid w-50 rounded"></figure> -->
+            <div data-aos="fade-uptext-justify"  data-aos-delay="100">
+            <h2 class="text-white text-justify">Hi I'm Sakha!</h2>
+            <br>
+            <p class="text-justify">You’ve just come to the right place to know about me!</p>
+            <p class="text-justify">I’m a self-taught photographer & an amateur designer from the Southernmost Atoll in the Maldives, based in the capital concrete jungle: Malè.</p>
+            <p class="text-justify">My inspiration in photography has always come from the people I’ve met and places I’ve travelled in my childhood. </p>
+            <p class="text-justify">The first time I photographed somebody was using a camcorder, at the age of 6 forcing my sister to model for me. Looking back, I have come a long way and I’m still working on polishing my skills.</p>
+            <p class="text-justify">Over the years, I’ve worked with businesses and people of all types & backgrounds.</p>
+            <p class="text-justify">My experience covers portraiture, product, landscape, wedding, events and architectural photography.</p>
+            <p class="text-justify">I consider myself incredibly lucky, to be doing what I love to do, and share my passion for photography with anyone and everyone who approach & work with me.  If you would like to consider working together, I would love to speak with you. </p>
+            <p class="text-white">Please email me directly at: <a href = "mailto: hello@sakha.photography">sakhafaheem@gmail.com</a> </p>
+            </div>
+            <div data-aos="fade-up"  data-aos-delay="100">
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
       <section class="row align-items-stretch photos" id="section-portraits">
@@ -476,7 +499,6 @@
             </a>
           </div>
 
-
       <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
         <a href="images/food/img14.jpg" class="d-block photo-item" data-fancybox="gallery">
           <img src="images/food/img14.jpg" alt="Image" class="img-fluid">
@@ -638,29 +660,6 @@
       </section> <!-- #section-photos -->
 
 
-      <section class="site-section darken-bg" id="section-aboutme">
-        <div class="container padding">
-          <div class="row">
-            <div class="col-md-8">
-              <h2 class="heading text-uppercase text-white">About Me</h2>
-              <!-- <figure class="mb-5" data-aos="fade-up"><img src="images/person_3.jpg" alt="Image" class="img-fluid w-50 rounded"></figure> -->
-              <div data-aos="fade-uptext-justify"  data-aos-delay="100">
-              <h2 class="text-white text-justify">Hi I'm Sakha!</h2>
-              <p class="text-justify">You’ve just come to the right place to know about me!</p>
-              <p class="text-justify">I’m a self-taught photographer & an amateur designer from the Southernmost Atoll in the Maldives, based in the capital concrete jungle: Malè.</p>
-              <p class="text-justify">My inspiration in photography has always come from the people I’ve met and places I’ve travelled in my childhood. </p>
-              <p class="text-justify">The first time I photographed somebody was using a camcorder, at the age of 6 forcing my sister to model for me. Looking back, I have come a long way and I’m still working on polishing my skills.</p>
-              <p class="text-justify">Over the years, I’ve worked with businesses and people of all types & backgrounds.</p>
-              <p class="text-justify">My experience covers portraiture, product, landscape, wedding, events and architectural photography.</p>
-              <p class="text-justify">I consider myself incredibly lucky, to be doing what I love to do, and share my passion for photography with anyone and everyone who approach & work with me.  If you would like to consider working together, I would love to speak with you. </p>
-              </div>
-              <div data-aos="fade-up"  data-aos-delay="100">
-              <p class="text-white">Please email me directly at: <a href = "mailto: hello@sakha.photography">hello@sakha.photography</a> </p>
-            </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
 
       </section>
